<resources>
    <string name="app_name">CookingRecipes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="register">สมัครสมาชิก</string>
    <string name="confirm">ยืนยัน</string>
    <string name="cancel">ยกเลิก</string>
    <string name="editProfile">แก้ไขโปรไฟล์ส่วนตัว</string>
    <string name="firstname">ชื่อ</string>
    <string name="firstname_edit">สมยอม</string>
    <string name="lastname">นามสกุล</string>
    <string name="lastname_edit">ศรีสวัส</string>
    <string name="gender">เพศ</string>
    <string name="male">ชาย</string>
    <string name="female">หญิง</string>
    <string name="age">อายุ</string>weight
    <string name="weight">น้ำหนัก</string>
    <string name="height">ส่วนสูง</string>
</resources>
